force-app/main/default/objects/Custom_Quote__c/fields/additionaltext__c.field-meta.xml
<CustomField>
    <fullName>additionaltext__c</fullName>
    <label>additionaltext</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>