force-app/main/default/objects/Custom_Quote__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Color</label>
    <referenceTo>Color_Master__c</referenceTo>
    <relationshipLabel>Custom Quotes</relationshipLabel>
    <relationshipName>Custom_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>