force-app/main/default/objects/Custom_Quote__c/fields/Customized_quote__c.field-meta.xml
<CustomField>
    <fullName>Customized_quote__c</fullName>
    <label>Customised quote</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>