force-app/main/default/objects/Custom_Quote__c/fields/ImageURL__c.field-meta.xml
<CustomField>
    <fullName>ImageURL__c</fullName>
    <label>ImageURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>