force-app/main/default/objects/Custom_Quote__c/fields/Is_Receive_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Is_Receive_Promotion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Receive Promotion</label>
    <type>Checkbox</type>
</CustomField>