force-app/main/default/objects/Custom_Quote__c/fields/Last_4_digits_of_NRIC_FIN_Passport_n__c.field-meta.xml
<CustomField>
    <fullName>Last_4_digits_of_NRIC_FIN_Passport_n__c</fullName>
    <label>Last 4 digits of NRIC/FIN/Passport n</label>
    <length>30</length>
    <type>Text</type>
</CustomField>