force-app/main/default/objects/Custom_Quote__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Custom Quotes</relationshipLabel>
    <relationshipName>Custom_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>