force-app/main/default/objects/Custom_Quote__c/fields/Loan_Interest__c.field-meta.xml
<CustomField>
    <fullName>Loan_Interest__c</fullName>
    <label>Loan Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>