force-app/main/default/objects/Custom_Quote__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Model</label>
    <referenceTo>Model__c</referenceTo>
    <relationshipLabel>Custom Quotes</relationshipLabel>
    <relationshipName>Custom_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>