force-app/main/default/objects/Custom_Quote__c/fields/Monthly_Installment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Installment__c</fullName>
    <label>Monthly Installment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>