force-app/main/default/objects/Custom_Quote__c/fields/PDPA__c.field-meta.xml
<CustomField>
    <fullName>PDPA__c</fullName>
    <label>PDPA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>