force-app/main/default/objects/Custom_Quote__c/fields/Vehicle_Brand__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Brand__c</fullName>
    <label>Vehicle Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>