force-app/main/default/objects/Custom_Quote__c/fields/Vehicle_registration_number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_registration_number__c</fullName>
    <label>Vehicle registration number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>