force-app/main/default/objects/Custom_Quote__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Accessories__c</columns>
    <columns>Account__c</columns>
    <columns>additionaltext__c</columns>
    <columns>Bank_Name__c</columns>
    <columns>Base_Price__c</columns>
    <columns>Color__c</columns>
    <columns>Color_Desc__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>